testing and getting ready for production

--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/index.ts"
+    "test": "jest",
+    "dev": "ts-node src/index.ts",  
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "@types/jest": "^29.5.12",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -19,7 +22,9 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash.merge": "^4.6.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
